# dbx_hack_doctors

./: .env.example  .gitignore  BUILD.MD  LICENSE  README.md  TODO.md  project_plan.md  pyproject.toml  run.sh
agents/: ingestion_agent.md  nfhs_survey_ingestion_agent.md  pincode_ingestion_agent.md
app/: app.yaml  server.py
app/frontend/: vite.config.js
app/frontend/src/: main.jsx  styles.css
app/jobs/: run_agent.py
app/lib/: databricks.py  json_fields.py  pipeline.py  pipeline_state.py  reparser.py  scoring.py  store.py
app/lib/agents/: SPEC.md  __init__.py  base.py  dedup.py  evidence.py  geo.py  ingestion.py  nfhs.py  pincode.py  qa.py  review.py  risk.py  shortage.py
app/sql/: unity_catalog_state.sql
data/raw/databricks_virtue_foundation_dataset_dais_2026/virtue_foundation_dataset/: manifest.json
data/raw/databricks_virtue_foundation_dataset_dais_2026/virtue_foundation_dataset/facilities/: schema.json
demo/: DEMO_CHECKLIST.md  DEMO_NARRATIVE.md  DEMO_SCRIPT.md  DEVPOST_STORY.md  README.md  SCORE_GUIDE.md  data_readiness_demo_import.xlsx  facility_upload_three_rows.csv  facility_upload_three_rows_v1.csv
docs/: action-workflow-design.md  agent_workflow_pipeline_v2_lindsay_handoff.md  demo-review-2026-06-15-current-state-import-actions.md  design-session-2026-06-15-agent-architecture.md  nfhs_survey_ingestion_data_quality.md  pincode_data_quality.md
scripts/: create_demo_import.py  download_catalog.py  explore_catalog.py  explore_workspace.py  inspect_local_data.py  setup_dbx_job.py  smoke_local_e2e.py  validate_dbx_deploy.py
(+2 files in other folders)
