[project]
name = "dbx-hack-doctors"
version = "0.1.0"
description = "Local Databricks workspace exploration scripts for the DBX hackathon project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sql-connector>=3.7.0",
    "databricks-sdk>=0.40.0",
    "streamlit>=1.40.0",
    "pyarrow>=16.0.0",
]

[tool.uv]
package = false
